--- a/mscore/debugger/note.ui
+++ b/mscore/debugger/note.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>525</width>
-    <height>301</height>
+    <width>807</width>
+    <height>309</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,16 @@
    <property name="spacing">
     <number>6</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>8</number>
+   </property>
+   <property name="topMargin">
+    <number>8</number>
+   </property>
+   <property name="rightMargin">
+    <number>8</number>
+   </property>
+   <property name="bottomMargin">
     <number>8</number>
    </property>
    <item>
@@ -87,30 +96,17 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QLabel" name="label_6">
         <property name="text">
-         <string notr="true" comment="do not translate">TPC</string>
+         <string notr="true" comment="do not translate">TPC2</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
-       <widget class="QSpinBox" name="tpc">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="2">
+      <item row="3" column="2">
        <widget class="QLabel" name="label_7">
         <property name="text">
          <string notr="true" comment="do not translate">HGrp.</string>
@@ -120,7 +116,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="3">
+      <item row="3" column="3">
        <widget class="QSpinBox" name="headGroup">
         <property name="toolTip">
          <string notr="true">note head group</string>
@@ -133,7 +129,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
+      <item row="4" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string notr="true" comment="do not translate">Line</string>
@@ -149,7 +145,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
+      <item row="4" column="1">
        <widget class="QSpinBox" name="line">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -165,45 +161,42 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="2" colspan="2">
+      <item row="4" column="2" colspan="2">
        <widget class="QPushButton" name="tieFor">
         <property name="text">
          <string notr="true" comment="do not translate">Tie Forw.</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="2" colspan="2">
-       <widget class="QPushButton" name="tieBack">
-        <property name="text">
-         <string notr="true" comment="do not translate">Tie Back</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="2" colspan="2">
-       <widget class="QPushButton" name="accidental">
-        <property name="text">
-         <string notr="true" comment="do not translate">Accidental</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="0" colspan="2">
+      <item row="9" column="0" colspan="2">
        <widget class="QCheckBox" name="mirror">
         <property name="text">
          <string notr="true" comment="do not translate">Mirror Head</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="label_5">
+      <item row="5" column="2" colspan="2">
+       <widget class="QPushButton" name="tieBack">
         <property name="text">
-         <string notr="true" comment="do not translate">S-Channel</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         <string notr="true" comment="do not translate">Tie Back</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
+      <item row="8" column="4">
+       <widget class="QPushButton" name="dot1">
+        <property name="text">
+         <string notr="true">Dot1</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="2" colspan="2">
+       <widget class="QPushButton" name="accidental">
+        <property name="text">
+         <string notr="true" comment="do not translate">Accidental</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1">
        <widget class="QSpinBox" name="subchannel">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -216,7 +209,27 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="2">
+      <item row="6" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string notr="true" comment="do not translate">S-Channel</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QSpinBox" name="velo">
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+        <property name="maximum">
+         <number>127</number>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
        <widget class="QLabel" name="label_11">
         <property name="text">
          <string notr="true">Velo</string>
@@ -226,15 +239,8 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="3">
-       <widget class="QSpinBox" name="velo">
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-        <property name="maximum">
-         <number>127</number>
-        </property>
-       </widget>
+      <item row="3" column="5" rowspan="5" colspan="2">
+       <widget class="QListWidget" name="fingering"/>
       </item>
       <item row="0" column="4">
        <widget class="QLabel" name="label_12">
@@ -249,23 +255,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="4">
-       <widget class="QLabel" name="label_10">
-        <property name="toolTip">
-         <string notr="true"/>
-        </property>
-        <property name="text">
-         <string notr="true" comment="do not translate">Elements</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="5" rowspan="5" colspan="2">
-       <widget class="QListWidget" name="fingering"/>
-      </item>
-      <item row="8" column="5" colspan="2">
+      <item row="9" column="5" colspan="2">
        <widget class="QComboBox" name="userMirror">
         <item>
          <property name="text">
@@ -284,14 +274,27 @@
         </item>
        </widget>
       </item>
-      <item row="8" column="2" colspan="2">
+      <item row="3" column="4">
+       <widget class="QLabel" name="label_10">
+        <property name="toolTip">
+         <string notr="true"/>
+        </property>
+        <property name="text">
+         <string notr="true" comment="do not translate">Elements</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="2" colspan="2">
        <widget class="QCheckBox" name="hidden">
         <property name="text">
          <string notr="true" comment="do not translate">Hidden</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="5" column="1">
        <widget class="QDoubleSpinBox" name="tuning">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -310,7 +313,7 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="0">
+      <item row="5" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
          <string notr="true">Tuning</string>
@@ -320,7 +323,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
+      <item row="8" column="0">
        <widget class="QLabel" name="label_14">
         <property name="text">
          <string notr="true">String</string>
@@ -330,7 +333,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="1">
+      <item row="8" column="1">
        <widget class="QSpinBox" name="string">
         <property name="readOnly">
          <bool>true</bool>
@@ -346,7 +349,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="2">
+      <item row="8" column="2">
        <widget class="QLabel" name="label_15">
         <property name="text">
          <string notr="true">Fret</string>
@@ -356,7 +359,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="3">
+      <item row="8" column="3">
        <widget class="QSpinBox" name="fret">
         <property name="readOnly">
          <bool>true</bool>
@@ -372,29 +375,93 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="4">
-       <widget class="QPushButton" name="dot1">
-        <property name="text">
-         <string notr="true">Dot1</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="5">
-       <widget class="QPushButton" name="dot2">
-        <property name="text">
-         <string notr="true">Dot2</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="6">
+      <item row="8" column="6">
        <widget class="QPushButton" name="dot3">
         <property name="text">
          <string notr="true">Dot3</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="5" rowspan="2" colspan="2">
+      <item row="8" column="5">
+       <widget class="QPushButton" name="dot2">
+        <property name="text">
+         <string notr="true">Dot2</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="5" rowspan="3" colspan="2">
        <widget class="QListWidget" name="noteEvents"/>
+      </item>
+      <item row="2" column="1">
+       <widget class="QSpinBox" name="tpc1">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="tpc2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_8">
+        <property name="text">
+         <string notr="true" comment="do not translate">TPC1</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QSpinBox" name="epitch">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
+        <property name="maximum">
+         <number>127</number>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_9">
+        <property name="text">
+         <string notr="true" comment="do not translate">ePitch</string>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::PlainText</enum>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+        <property name="buddy">
+         <cstring>pitch</cstring>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
