fix #23052 hide instrument name style option
Former-commit-id: 20f0fc07e99879e5692884154fb8c63c0c830bd7

--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -322,6 +322,13 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="hideInstrumentNameIfOneInstrument">
+            <property name="text">
+             <string>Hide instrument name if there is only 1 instrument</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <spacer name="verticalSpacer">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
