fix default & add test
Former-commit-id: 71101937b10ac3faf1c2fb5290892db69c85c996

--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -4313,7 +4313,7 @@
             <property name="title">
              <string>Positioning</string>
             </property>
-            <layout class="QGridLayout" name="gridLayout">
+            <layout class="QGridLayout" name="gridLayout2">
              <item row="0" column="0">
               <widget class="QLabel" name="label_17">
                <property name="text">
